k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: apptest.ltillieu.duckdns.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: trilium-service
              port:
                number: 80
  tls:
  - hosts:
    - apptest.ltillieu.duckdns.org
    secretName: ssl-certificate-secret
